--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          VITE_API_BASE: https://travel-api.mhw1973.workers.dev
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
